updated icons colours in skill set

--- a/index.html
+++ b/index.html
@@ -446,12 +446,13 @@
                 </div>
               </div>
             </div>
+
             <div class="progress">
               <span class="skill">
                 <!-- TypeScript Logo -->
                 <img
                   src="https://raw.githubusercontent.com/devicons/devicon/master/icons/typescript/typescript-original.svg"
-                  alt="TypeScript" style="width:20px; height:20px; margin-right:8px; vertical-align:middle;">
+                  alt="TypeScript" class="ts-icon">
                 TypeScript
                 <i class="val">40%</i>
               </span>
@@ -460,8 +461,6 @@
                 </div>
               </div>
             </div>
-
-
           </div>
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
@@ -488,6 +487,7 @@
                 </div>
               </div>
             </div>
+
             <div class="progress">
               <span class="skill"><i class="fab fa-php"></i> PHP <i class="val">50%</i></span>
               <div class="progress-bar-wrap">
@@ -495,8 +495,6 @@
                 </div>
               </div>
             </div>
-
-
 
             <div class="progress">
               <span class="skill"><i class="fab fa-node-js"></i> Node.Js <i class="val">30%</i></span>
@@ -509,11 +507,58 @@
 
         </div>
 
+
       </div>
     </section><!-- End Skills Section -->
 
     <!-- Embedded CSS -->
     <style>
+      /* Icon brand colors */
+      .fa-html5 {
+        color: #E34F26;
+      }
+
+      .fa-css3-alt {
+        color: #1572B6;
+      }
+
+      .fa-js-square {
+        color: #F7DF1E;
+      }
+
+      .fa-database {
+        color: #4479A1;
+      }
+
+      /* SQL/MySQL bluish */
+      .fa-python {
+        color: #3776AB;
+      }
+
+      .fa-figma {
+        color: #F24E1E;
+      }
+
+      .fa-git-alt {
+        color: #F1502F;
+      }
+
+      .fa-php {
+        color: #777BB4;
+      }
+
+      .fa-node-js {
+        color: #68A063;
+      }
+
+      /* TypeScript logo */
+      .ts-icon {
+        width: 20px;
+        height: 20px;
+        margin-right: 8px;
+        vertical-align: middle;
+      }
+
       .skills {
         padding: 60px 0;
       }
