--- a/index.html
+++ b/index.html
@@ -1115,7 +1115,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/simplilearn.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
@@ -1124,7 +1124,7 @@
                 <a href="awards/simplilearn.html" title="More Details"><i class="bx bx-expand-alt"></i></a>
               </div>
             </div>
-          </div>
+          </div> -->
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
@@ -1149,7 +1149,7 @@
             </div>
           </div>-->
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/other_clg.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
@@ -1158,7 +1158,7 @@
                 <a href="awards/other.html" title="More Details"><i class="bx bx-expand-alt"></i></a>
               </div>
             </div>
-          </div>
+          </div> -->
 
           <!-- 
           <div class="col-lg-4 col-md-6 portfolio-item filter-shop">
