updated tool tip styling and modified content in interest section

--- a/index.html
+++ b/index.html
@@ -1283,207 +1283,218 @@
       });
     </script>
 
-    <!-- ======= Interests Section ======= -->
-    <section id="interests" class="interests-section">
-      <div class="container">
+<!-- ======= Interests Section ======= -->
+<section id="interests" class="interests-section">
+  <div class="container">
 
-        <div class="section-title">
-          <h2>Interests</h2>
-          <p>Explore my interests.</p>
+    <div class="section-title">
+      <h2>Interests</h2>
+      <p>Explore my interests.</p>
+    </div>
+
+    <div class="row">
+      <div class="col-lg-4 col-md-6 mb-4">
+        <div class="interests-box" data-aos="fade-up">
+          <div class="interest-orb">
+            <div class="icon"><i class="bi bi-laptop"></i></div>
+            <span class="tooltip">Web Development</span>
+          </div>
+          <h4 class="title"><a href="#">Web Development</a></h4>
+          <p class="description">I’m passionate about building user-friendly digital experiences, combining front-end creativity with back-end logic. I love transforming ideas into interactive websites using coding languages and frameworks.</p>
         </div>
-
-        <div class="row">
-          <div class="col-lg-4 col-md-6 mb-4">
-            <div class="interests-box" data-aos="fade-up">
-              <div class="interest-orb">
-                <div class="icon"><i class="bi bi-laptop"></i></div>
-                <span class="tooltip">Web Development</span>
-              </div>
-              <h4 class="title"><a href="#">Web Development</a></h4>
-              <p class="description">As a web development enthusiast, I'm passionate about crafting engaging and
-                user-friendly digital experiences. From front-end design to back-end functionality, I enjoy diving into
-                the intricacies of coding languages and frameworks to bring ideas to life on the web.</p>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6 mb-4">
-            <div class="interests-box" data-aos="fade-up" data-aos-delay="200">
-              <div class="interest-orb">
-                <div class="icon"><i class="bi bi-camera"></i></div>
-                <span class="tooltip">Photography</span>
-              </div>
-              <h4 class="title"><a href="#">Photography</a></h4>
-              <p class="description">Photography is my lens to capture the beauty and diversity of the world around us.
-                Whether it's exploring new landscapes or finding the extraordinary in the ordinary, I'm constantly
-                seeking to freeze moments in time and evoke emotions through my lens.</p>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6 mb-4">
-            <div class="interests-box" data-aos="fade-up" data-aos-delay="300">
-              <div class="interest-orb">
-                <div class="icon"><i class="bi bi-globe"></i></div>
-                <span class="tooltip">Travel</span>
-              </div>
-              <h4 class="title"><a href="#">Travel</a></h4>
-              <p class="description">Traveling isn't just a hobby; it's a way of life for me. Exploring new cultures,
-                cuisines, and landscapes ignites my sense of adventure and broadens my perspective. Each journey is an
-                opportunity to embrace diversity, create unforgettable memories, and foster personal growth.</p>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6 mb-4">
-            <div class="interests-box" data-aos="fade-up" data-aos-delay="400">
-              <div class="interest-orb">
-                <div class="icon"><i class="bi bi-palette"></i></div>
-                <span class="tooltip">UI/UX Design</span>
-              </div>
-              <h4 class="title"><a href="#">UI/UX Design</a></h4>
-              <p class="description">UI/UX design is where functionality meets aesthetics, and I thrive in finding the
-                perfect balance between the two. From wireframing to prototyping, I enjoy crafting seamless and
-                intuitive user experiences that resonate with audiences and elevate digital products to the next level.
-              </p>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6 mb-4">
-            <div class="interests-box" data-aos="fade-up" data-aos-delay="500">
-              <div class="interest-orb">
-                <div class="icon"><i class="bi bi-headset"></i></div>
-                <span class="tooltip">Music</span>
-              </div>
-              <h4 class="title"><a href="#">Music</a></h4>
-              <p class="description">Explore the world of music, from classical to contemporary genres. Discover new
-                artists, albums, and songs. Learn about music theory, composition, and performance techniques.</p>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6 mb-4">
-            <div class="interests-box" data-aos="fade-up" data-aos-delay="600">
-              <div class="interest-orb">
-                <div class="icon"><i class="bi bi-fingerprint"></i></div>
-                <span class="tooltip">Ethical Hacking</span>
-              </div>
-              <h4 class="title"><a href="#">Ethical Hacking</a></h4>
-              <p class="description">Learn about ethical hacking, cybersecurity, and penetration testing to protect
-                digital assets and enhance security measures. Explore tools, techniques, and methodologies for
-                identifying and mitigating security vulnerabilities.</p>
-            </div>
-          </div>
-        </div>
-
       </div>
-    </section>
-    <!-- End Interests Section -->
+      <div class="col-lg-4 col-md-6 mb-4">
+        <div class="interests-box" data-aos="fade-up" data-aos-delay="200">
+          <div class="interest-orb">
+            <div class="icon"><i class="bi bi-camera"></i></div>
+            <span class="tooltip">Photography</span>
+          </div>
+          <h4 class="title"><a href="#">Photography</a></h4>
+          <p class="description">Through photography, I capture life’s beauty and diversity. From landscapes to small details, each photo freezes moments, evokes emotions, and tells stories beyond words.</p>
+        </div>
+      </div>
+      <div class="col-lg-4 col-md-6 mb-4">
+        <div class="interests-box" data-aos="fade-up" data-aos-delay="300">
+          <div class="interest-orb">
+            <div class="icon"><i class="bi bi-globe"></i></div>
+            <span class="tooltip">Travel</span>
+          </div>
+          <h4 class="title"><a href="#">Travel</a></h4>
+          <p class="description">Travel enriches my soul. Exploring diverse cultures, cuisines, and landscapes fuels my curiosity, creates unforgettable memories, and broadens perspectives while fostering meaningful personal growth.</p>
+        </div>
+      </div>
+      <div class="col-lg-4 col-md-6 mb-4">
+        <div class="interests-box" data-aos="fade-up" data-aos-delay="400">
+          <div class="interest-orb">
+            <div class="icon"><i class="bi bi-palette"></i></div>
+            <span class="tooltip">UI/UX Design</span>
+          </div>
+          <h4 class="title"><a href="#">UI/UX Design</a></h4>
+          <p class="description">UI/UX design merges functionality and beauty. I create intuitive interfaces, wireframes, and prototypes that elevate digital products, delivering seamless, engaging, and memorable user experiences.</p>
+        </div>
+      </div>
+      <div class="col-lg-4 col-md-6 mb-4">
+        <div class="interests-box" data-aos="fade-up" data-aos-delay="500">
+          <div class="interest-orb">
+            <div class="icon"><i class="bi bi-headset"></i></div>
+            <span class="tooltip">Music</span>
+          </div>
+          <h4 class="title"><a href="#">Music</a></h4>
+          <p class="description">Music bridges cultures and emotions. I explore genres, artists, and compositions while learning theory and performance techniques to appreciate rhythm, melody, and harmony deeply.</p>
+        </div>
+      </div>
+      <div class="col-lg-4 col-md-6 mb-4">
+        <div class="interests-box" data-aos="fade-up" data-aos-delay="600">
+          <div class="interest-orb">
+            <div class="icon"><i class="bi bi-fingerprint"></i></div>
+            <span class="tooltip">Ethical Hacking</span>
+          </div>
+          <h4 class="title"><a href="#">Ethical Hacking</a></h4>
+          <p class="description">Ethical hacking safeguards digital systems. I study cybersecurity tools, penetration testing, and vulnerabilities to strengthen defenses, ensuring information security and protecting organizations against cyber threats.</p>
+        </div>
+      </div>
+    </div>
 
-    <style>
-      /* --- Keyframe Animation for Orbiting Icon --- */
-      @keyframes orbit {
-        0% {
-          transform: rotate(0deg) translateX(5px) rotate(0deg);
-        }
+  </div>
+</section>
+<!-- End Interests Section -->
 
-        100% {
-          transform: rotate(360deg) translateX(5px) rotate(-360deg);
-        }
-      }
+<style>
+  /* --- Keyframe Animation for Orbiting Icon --- */
+  @keyframes orbit {
+    0% {
+      transform: rotate(0deg) translateX(6px) rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg) translateX(6px) rotate(-360deg);
+    }
+  }
 
-      /* --- Orb Container for the Animation --- */
-      .interest-orb {
-        position: relative;
-        /* Needed for tooltip positioning */
-        margin: 0 auto 20px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        animation: orbit 4s linear infinite;
-      }
+  /* --- Bounce Animation for Arrow --- */
+  @keyframes bounceArrow {
+    0%, 100% {
+      transform: translateX(-50%) translateY(0);
+    }
+    50% {
+      transform: translateX(-50%) translateY(3px);
+    }
+  }
 
-      /* --- Tooltip Styling --- */
-      .interest-orb .tooltip {
-        position: absolute;
-        top: -30px;
-        /* Position above the icon */
-        background: #333;
-        /* Dark background for tooltip */
-        color: #fff;
-        padding: 4px 8px;
-        border-radius: 4px;
-        font-size: 12px;
-        font-weight: 500;
-        opacity: 0;
-        pointer-events: none;
-        /* So it doesn't interfere with hover */
-        transition: opacity 0.3s ease;
-        white-space: nowrap;
-      }
+  /* --- Orb Container for the Animation --- */
+  .interest-orb {
+    position: relative;
+    margin: 0 auto 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    animation: orbit 3s linear infinite;
+  }
 
-      .interest-orb:hover .tooltip {
-        opacity: 1;
-      }
+  /* --- Tooltip Styling --- */
+  .interest-orb .tooltip {
+    position: absolute;
+    top: -40px;
+    left: 50%;
+    transform: translateX(-50%) translateY(10px);
+    background: #111;
+    color: #fff;
+    padding: 6px 12px;
+    border-radius: 6px;
+    font-size: 13px;
+    font-weight: 600;
+    white-space: nowrap;
+    opacity: 0;
+    pointer-events: none;
+    transition: all 0.35s ease;
+    z-index: 999;
+  }
 
-      /* --- Original Interests Section Styling (Unchanged) --- */
-      .interests-section {
-        background-color: #f8f9fa;
-        padding: 60px 0;
-      }
+  /* Tooltip Arrow */
+  .interest-orb .tooltip::after {
+    content: "";
+    position: absolute;
+    bottom: -6px;
+    left: 50%;
+    transform: translateX(-50%);
+    border-width: 6px;
+    border-style: solid;
+    border-color: #111 transparent transparent transparent;
+    opacity: 0;
+  }
 
-      .interests-section .section-title h2 {
-        font-size: 32px;
-        font-weight: bold;
-        color: #173b6c;
-        margin-bottom: 20px;
-      }
+  /* Hover Effect with Smooth Upward Slide */
+  .interest-orb:hover .tooltip {
+    opacity: 1;
+    transform: translateX(-50%) translateY(0);
+    top: -50px;
+  }
 
-      .interests-section .section-title p {
-        font-size: 16px;
-        color: #6c757d;
-        line-height: 1.6;
-      }
+  /* Animate Arrow on Hover */
+  .interest-orb:hover .tooltip::after {
+    opacity: 1;
+    animation: bounceArrow 0.6s ease infinite;
+  }
 
-      .interests-box {
-        background: rgba(0, 0, 0, 0.8);
-        border-radius: 15px;
-        padding: 20px;
-        color: #fff;
-        box-sizing: border-box;
-        height: 100%;
-        width: 100%;
-        text-align: center;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        transition: box-shadow 0.3s ease;
-        overflow: hidden;
-      }
+  /* --- Original Interests Section Styling --- */
+  .interests-section {
+    background-color: #f8f9fa;
+    padding: 60px 0;
+  }
 
+  .interests-section .section-title h2 {
+    font-size: 32px;
+    font-weight: bold;
+    color: #173b6c;
+    margin-bottom: 20px;
+  }
 
-      .interests-box .icon {
-        font-size: 48px;
-        color: #00aaff;
+  .interests-section .section-title p {
+    font-size: 16px;
+    color: #6c757d;
+    line-height: 1.6;
+  }
 
-      }
+  .interests-box {
+    background: rgba(0, 0, 0, 0.8);
+    border-radius: 15px;
+    padding: 20px;
+    color: #fff;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    transition: box-shadow 0.3s ease;
+    overflow: visible !important;
+  }
 
-      .interests-box h4 {
-        font-size: 20px;
-        font-weight: bold;
-        color: #fff;
-        margin-bottom: 15px;
-      }
+  .interests-box .icon {
+    font-size: 48px;
+    color: #00aaff;
+  }
 
-      .interests-box h4 a {
-        color: inherit;
-        text-decoration: none;
-      }
+  .interests-box h4 {
+    font-size: 20px;
+    font-weight: bold;
+    color: #fff;
+    margin-bottom: 15px;
+  }
 
-      .interests-box p {
-        font-size: 16px;
-        color: #e0e0e0;
-        margin: 0;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        white-space: normal;
-      }
+  .interests-box h4 a {
+    color: inherit;
+    text-decoration: none;
+  }
 
-      .interests-box:hover {
-        box-shadow: 0 0 15px rgba(255, 255, 255, 0.7);
-      }
-    </style>
+  .interests-box p {
+    font-size: 16px;
+    color: #e0e0e0;
+    margin: 0;
+  }
+
+  .interests-box:hover {
+    box-shadow: 0 0 15px rgba(255, 255, 255, 0.7);
+  }
+</style>
+
 
 
 
