--- a/awards/garuda.html
+++ b/awards/garuda.html
@@ -250,7 +250,7 @@
     <div class="container">
 
       <div class="credits">
-        Designed by <a href="https://www.jayanth.site/">Jayanth Donavalli</a>
+        Designed by <a href="https://www.jayanth.site/">Donavalli Jayanth </a>
       </div>
     </div>
   </footer><a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
