Added RAG chatbot Link

--- a/index.html
+++ b/index.html
@@ -1879,6 +1879,7 @@
   <script src="assets/vendor/typed.js/typed.umd.js"></script>
   <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
+  <script src='https://www.noupe.com/embed/0199aae804887d1aad563e556c4d77b2ab93.js'></script>
 
   <!-- Template Main JS File -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
