updated frontend developer to full stack developer

--- a/index.html
+++ b/index.html
@@ -193,13 +193,13 @@
       <div class="container">
         <div class="section-title">
           <h2>About</h2>
-          <p>As a passionate Front-End Developer, I specialize in building responsive, user-centric web interfaces using
-            HTML, CSS, and JavaScript. I have hands-on experience developing interactive web applications—ranging from
-            API-powered tools to AI-integrated platforms—while using frameworks like React and Vue to deliver dynamic,
-            high-performance solutions. My skill set includes UI/UX design, Python, Firebase, and working with RESTful
-            APIs. I’m committed to continuous learning, earning certifications, and building real-world projects to stay
-            up to date with evolving technologies. I thrive in collaborative, agile environments and focus on writing
-            clean, scalable, and accessible front-end code that enhances user experience.</p>
+          <p>A results-driven Full-Stack Developer specializing in JavaScript, TypeScript, React.js, Node.js, and Python
+            to build high-performance, responsive web applications. Proven ability to develop end-to-end solutions, from
+            creating RESTful APIs with Node.js to building interactive user interfaces with React. Experienced in API
+            integration, including the OpenAI and Pexels APIs , and developing AI-powered applications with
+            TensorFlow.js and Python. Proficient in database management with Firebase Realtime Database and Firestore. A
+            collaborative team player with hands-on experience in Agile development environments and version control
+            with Git and GitHub.</p>
         </div>
 
         <div class="row">
@@ -211,7 +211,7 @@
               <div class="custom-circle circle-top"></div>
               <div class="custom-circle circle-bottom"></div>
               <div class="custom-card-inner">
-                <h3>Frontend Developer</h3>
+                <h3>Full Stack Developer</h3>
                 <p class="fst-italic">
                   I'm currently expanding my skills toward full-stack development and learning about AI and large
                   language models (LLMs). I’m committe d to staying updated with the latest innovations to build modern
@@ -1283,217 +1283,231 @@
       });
     </script>
 
-<!-- ======= Interests Section ======= -->
-<section id="interests" class="interests-section">
-  <div class="container">
+    <!-- ======= Interests Section ======= -->
+    <section id="interests" class="interests-section">
+      <div class="container">
 
-    <div class="section-title">
-      <h2>Interests</h2>
-      <p>Explore my interests.</p>
-    </div>
-
-    <div class="row">
-      <div class="col-lg-4 col-md-6 mb-4">
-        <div class="interests-box" data-aos="fade-up">
-          <div class="interest-orb">
-            <div class="icon"><i class="bi bi-laptop"></i></div>
-            <span class="tooltip">Web Development</span>
-          </div>
-          <h4 class="title"><a href="#">Web Development</a></h4>
-          <p class="description">I’m passionate about building user-friendly digital experiences, combining front-end creativity with back-end logic. I love transforming ideas into interactive websites using coding languages and frameworks.</p>
+        <div class="section-title">
+          <h2>Interests</h2>
+          <p>Explore my interests.</p>
         </div>
-      </div>
-      <div class="col-lg-4 col-md-6 mb-4">
-        <div class="interests-box" data-aos="fade-up" data-aos-delay="200">
-          <div class="interest-orb">
-            <div class="icon"><i class="bi bi-camera"></i></div>
-            <span class="tooltip">Photography</span>
+
+        <div class="row">
+          <div class="col-lg-4 col-md-6 mb-4">
+            <div class="interests-box" data-aos="fade-up">
+              <div class="interest-orb">
+                <div class="icon"><i class="bi bi-laptop"></i></div>
+                <span class="tooltip">Web Development</span>
+              </div>
+              <h4 class="title"><a href="#">Web Development</a></h4>
+              <p class="description">I’m passionate about building user-friendly digital experiences, combining
+                front-end creativity with back-end logic. I love transforming ideas into interactive websites using
+                coding languages and frameworks.</p>
+            </div>
           </div>
-          <h4 class="title"><a href="#">Photography</a></h4>
-          <p class="description">Through photography, I capture life’s beauty and diversity. From landscapes to small details, each photo freezes moments, evokes emotions, and tells stories beyond words.</p>
-        </div>
-      </div>
-      <div class="col-lg-4 col-md-6 mb-4">
-        <div class="interests-box" data-aos="fade-up" data-aos-delay="300">
-          <div class="interest-orb">
-            <div class="icon"><i class="bi bi-globe"></i></div>
-            <span class="tooltip">Travel</span>
+          <div class="col-lg-4 col-md-6 mb-4">
+            <div class="interests-box" data-aos="fade-up" data-aos-delay="200">
+              <div class="interest-orb">
+                <div class="icon"><i class="bi bi-camera"></i></div>
+                <span class="tooltip">Photography</span>
+              </div>
+              <h4 class="title"><a href="#">Photography</a></h4>
+              <p class="description">Through photography, I capture life’s beauty and diversity. From landscapes to
+                small details, each photo freezes moments, evokes emotions, and tells stories beyond words.</p>
+            </div>
           </div>
-          <h4 class="title"><a href="#">Travel</a></h4>
-          <p class="description">Travel enriches my soul. Exploring diverse cultures, cuisines, and landscapes fuels my curiosity, creates unforgettable memories, and broadens perspectives while fostering meaningful personal growth.</p>
-        </div>
-      </div>
-      <div class="col-lg-4 col-md-6 mb-4">
-        <div class="interests-box" data-aos="fade-up" data-aos-delay="400">
-          <div class="interest-orb">
-            <div class="icon"><i class="bi bi-palette"></i></div>
-            <span class="tooltip">UI/UX Design</span>
+          <div class="col-lg-4 col-md-6 mb-4">
+            <div class="interests-box" data-aos="fade-up" data-aos-delay="300">
+              <div class="interest-orb">
+                <div class="icon"><i class="bi bi-globe"></i></div>
+                <span class="tooltip">Travel</span>
+              </div>
+              <h4 class="title"><a href="#">Travel</a></h4>
+              <p class="description">Travel enriches my soul. Exploring diverse cultures, cuisines, and landscapes fuels
+                my curiosity, creates unforgettable memories, and broadens perspectives while fostering meaningful
+                personal growth.</p>
+            </div>
           </div>
-          <h4 class="title"><a href="#">UI/UX Design</a></h4>
-          <p class="description">UI/UX design merges functionality and beauty. I create intuitive interfaces, wireframes, and prototypes that elevate digital products, delivering seamless, engaging, and memorable user experiences.</p>
-        </div>
-      </div>
-      <div class="col-lg-4 col-md-6 mb-4">
-        <div class="interests-box" data-aos="fade-up" data-aos-delay="500">
-          <div class="interest-orb">
-            <div class="icon"><i class="bi bi-headset"></i></div>
-            <span class="tooltip">Music</span>
+          <div class="col-lg-4 col-md-6 mb-4">
+            <div class="interests-box" data-aos="fade-up" data-aos-delay="400">
+              <div class="interest-orb">
+                <div class="icon"><i class="bi bi-palette"></i></div>
+                <span class="tooltip">UI/UX Design</span>
+              </div>
+              <h4 class="title"><a href="#">UI/UX Design</a></h4>
+              <p class="description">UI/UX design merges functionality and beauty. I create intuitive interfaces,
+                wireframes, and prototypes that elevate digital products, delivering seamless, engaging, and memorable
+                user experiences.</p>
+            </div>
           </div>
-          <h4 class="title"><a href="#">Music</a></h4>
-          <p class="description">Music bridges cultures and emotions. I explore genres, artists, and compositions while learning theory and performance techniques to appreciate rhythm, melody, and harmony deeply.</p>
-        </div>
-      </div>
-      <div class="col-lg-4 col-md-6 mb-4">
-        <div class="interests-box" data-aos="fade-up" data-aos-delay="600">
-          <div class="interest-orb">
-            <div class="icon"><i class="bi bi-fingerprint"></i></div>
-            <span class="tooltip">Ethical Hacking</span>
+          <div class="col-lg-4 col-md-6 mb-4">
+            <div class="interests-box" data-aos="fade-up" data-aos-delay="500">
+              <div class="interest-orb">
+                <div class="icon"><i class="bi bi-headset"></i></div>
+                <span class="tooltip">Music</span>
+              </div>
+              <h4 class="title"><a href="#">Music</a></h4>
+              <p class="description">Music bridges cultures and emotions. I explore genres, artists, and compositions
+                while learning theory and performance techniques to appreciate rhythm, melody, and harmony deeply.</p>
+            </div>
           </div>
-          <h4 class="title"><a href="#">Ethical Hacking</a></h4>
-          <p class="description">Ethical hacking safeguards digital systems. I study cybersecurity tools, penetration testing, and vulnerabilities to strengthen defenses, ensuring information security and protecting organizations against cyber threats.</p>
+          <div class="col-lg-4 col-md-6 mb-4">
+            <div class="interests-box" data-aos="fade-up" data-aos-delay="600">
+              <div class="interest-orb">
+                <div class="icon"><i class="bi bi-fingerprint"></i></div>
+                <span class="tooltip">Ethical Hacking</span>
+              </div>
+              <h4 class="title"><a href="#">Ethical Hacking</a></h4>
+              <p class="description">Ethical hacking safeguards digital systems. I study cybersecurity tools,
+                penetration testing, and vulnerabilities to strengthen defenses, ensuring information security and
+                protecting organizations against cyber threats.</p>
+            </div>
+          </div>
         </div>
+
       </div>
-    </div>
+    </section>
+    <!-- End Interests Section -->
 
-  </div>
-</section>
-<!-- End Interests Section -->
+    <style>
+      /* --- Keyframe Animation for Orbiting Icon --- */
+      @keyframes orbit {
+        0% {
+          transform: rotate(0deg) translateX(6px) rotate(0deg);
+        }
 
-<style>
-  /* --- Keyframe Animation for Orbiting Icon --- */
-  @keyframes orbit {
-    0% {
-      transform: rotate(0deg) translateX(6px) rotate(0deg);
-    }
-    100% {
-      transform: rotate(360deg) translateX(6px) rotate(-360deg);
-    }
-  }
+        100% {
+          transform: rotate(360deg) translateX(6px) rotate(-360deg);
+        }
+      }
 
-  /* --- Bounce Animation for Arrow --- */
-  @keyframes bounceArrow {
-    0%, 100% {
-      transform: translateX(-50%) translateY(0);
-    }
-    50% {
-      transform: translateX(-50%) translateY(3px);
-    }
-  }
+      /* --- Bounce Animation for Arrow --- */
+      @keyframes bounceArrow {
 
-  /* --- Orb Container for the Animation --- */
-  .interest-orb {
-    position: relative;
-    margin: 0 auto 20px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    animation: orbit 3s linear infinite;
-  }
+        0%,
+        100% {
+          transform: translateX(-50%) translateY(0);
+        }
 
-  /* --- Tooltip Styling --- */
-  .interest-orb .tooltip {
-    position: absolute;
-    top: -40px;
-    left: 50%;
-    transform: translateX(-50%) translateY(10px);
-    background: #111;
-    color: #fff;
-    padding: 6px 12px;
-    border-radius: 6px;
-    font-size: 13px;
-    font-weight: 600;
-    white-space: nowrap;
-    opacity: 0;
-    pointer-events: none;
-    transition: all 0.35s ease;
-    z-index: 999;
-  }
+        50% {
+          transform: translateX(-50%) translateY(3px);
+        }
+      }
 
-  /* Tooltip Arrow */
-  .interest-orb .tooltip::after {
-    content: "";
-    position: absolute;
-    bottom: -6px;
-    left: 50%;
-    transform: translateX(-50%);
-    border-width: 6px;
-    border-style: solid;
-    border-color: #111 transparent transparent transparent;
-    opacity: 0;
-  }
+      /* --- Orb Container for the Animation --- */
+      .interest-orb {
+        position: relative;
+        margin: 0 auto 20px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        animation: orbit 3s linear infinite;
+      }
 
-  /* Hover Effect with Smooth Upward Slide */
-  .interest-orb:hover .tooltip {
-    opacity: 1;
-    transform: translateX(-50%) translateY(0);
-    top: -50px;
-  }
+      /* --- Tooltip Styling --- */
+      .interest-orb .tooltip {
+        position: absolute;
+        top: -40px;
+        left: 50%;
+        transform: translateX(-50%) translateY(10px);
+        background: #111;
+        color: #fff;
+        padding: 6px 12px;
+        border-radius: 6px;
+        font-size: 13px;
+        font-weight: 600;
+        white-space: nowrap;
+        opacity: 0;
+        pointer-events: none;
+        transition: all 0.35s ease;
+        z-index: 999;
+      }
 
-  /* Animate Arrow on Hover */
-  .interest-orb:hover .tooltip::after {
-    opacity: 1;
-    animation: bounceArrow 0.6s ease infinite;
-  }
+      /* Tooltip Arrow */
+      .interest-orb .tooltip::after {
+        content: "";
+        position: absolute;
+        bottom: -6px;
+        left: 50%;
+        transform: translateX(-50%);
+        border-width: 6px;
+        border-style: solid;
+        border-color: #111 transparent transparent transparent;
+        opacity: 0;
+      }
 
-  /* --- Original Interests Section Styling --- */
-  .interests-section {
-    background-color: #f8f9fa;
-    padding: 60px 0;
-  }
+      /* Hover Effect with Smooth Upward Slide */
+      .interest-orb:hover .tooltip {
+        opacity: 1;
+        transform: translateX(-50%) translateY(0);
+        top: -50px;
+      }
 
-  .interests-section .section-title h2 {
-    font-size: 32px;
-    font-weight: bold;
-    color: #173b6c;
-    margin-bottom: 20px;
-  }
+      /* Animate Arrow on Hover */
+      .interest-orb:hover .tooltip::after {
+        opacity: 1;
+        animation: bounceArrow 0.6s ease infinite;
+      }
 
-  .interests-section .section-title p {
-    font-size: 16px;
-    color: #6c757d;
-    line-height: 1.6;
-  }
+      /* --- Original Interests Section Styling --- */
+      .interests-section {
+        background-color: #f8f9fa;
+        padding: 60px 0;
+      }
 
-  .interests-box {
-    background: rgba(0, 0, 0, 0.8);
-    border-radius: 15px;
-    padding: 20px;
-    color: #fff;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    transition: box-shadow 0.3s ease;
-    overflow: visible !important;
-  }
+      .interests-section .section-title h2 {
+        font-size: 32px;
+        font-weight: bold;
+        color: #173b6c;
+        margin-bottom: 20px;
+      }
 
-  .interests-box .icon {
-    font-size: 48px;
-    color: #00aaff;
-  }
+      .interests-section .section-title p {
+        font-size: 16px;
+        color: #6c757d;
+        line-height: 1.6;
+      }
 
-  .interests-box h4 {
-    font-size: 20px;
-    font-weight: bold;
-    color: #fff;
-    margin-bottom: 15px;
-  }
+      .interests-box {
+        background: rgba(0, 0, 0, 0.8);
+        border-radius: 15px;
+        padding: 20px;
+        color: #fff;
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        transition: box-shadow 0.3s ease;
+        overflow: visible !important;
+      }
 
-  .interests-box h4 a {
-    color: inherit;
-    text-decoration: none;
-  }
+      .interests-box .icon {
+        font-size: 48px;
+        color: #00aaff;
+      }
 
-  .interests-box p {
-    font-size: 16px;
-    color: #e0e0e0;
-    margin: 0;
-  }
+      .interests-box h4 {
+        font-size: 20px;
+        font-weight: bold;
+        color: #fff;
+        margin-bottom: 15px;
+      }
 
-  .interests-box:hover {
-    box-shadow: 0 0 15px rgba(255, 255, 255, 0.7);
-  }
-</style>
+      .interests-box h4 a {
+        color: inherit;
+        text-decoration: none;
+      }
+
+      .interests-box p {
+        font-size: 16px;
+        color: #e0e0e0;
+        margin: 0;
+      }
+
+      .interests-box:hover {
+        box-shadow: 0 0 15px rgba(255, 255, 255, 0.7);
+      }
+    </style>
 
 
 
