updated about info

--- a/index.html
+++ b/index.html
@@ -193,13 +193,13 @@
       <div class="container">
         <div class="section-title">
           <h2>About</h2>
-          <p>A results-driven Full-Stack Developer specializing in JavaScript, TypeScript, React.js, Node.js, and Python
+          <!-- <p>A results-driven Full-Stack Developer specializing in JavaScript, TypeScript, React.js, Node.js, and Python
             to build high-performance, responsive web applications. Proven ability to develop end-to-end solutions, from
             creating RESTful APIs with Node.js to building interactive user interfaces with React. Experienced in API
             integration, including the OpenAI and Pexels APIs , and developing AI-powered applications with
             TensorFlow.js and Python. Proficient in database management with Firebase Realtime Database and Firestore. A
             collaborative team player with hands-on experience in Agile development environments and version control
-            with Git and GitHub.</p>
+            with Git and GitHub.</p> -->
         </div>
 
         <div class="row">
@@ -213,9 +213,13 @@
               <div class="custom-card-inner">
                 <h3>Full Stack Developer</h3>
                 <p class="fst-italic">
-                  I'm currently expanding my skills toward full-stack development and learning about AI and large
-                  language models (LLMs). I’m committe d to staying updated with the latest innovations to build modern
-                  and effective web applications.
+                  A results-driven Full-Stack Developer specializing in JavaScript, TypeScript, React.js, Node.js, and Python
+            to build high-performance, responsive web applications. Proven ability to develop end-to-end solutions, from
+            creating RESTful APIs with Node.js to building interactive user interfaces with React. Experienced in API
+            integration, including the OpenAI and Pexels APIs , and developing AI-powered applications with
+            TensorFlow.js and Python. Proficient in database management with Firebase Realtime Database and Firestore. A
+            collaborative team player with hands-on experience in Agile development environments and version control
+            with Git and GitHub.
                 </p>
                 <div class="row">
                   <div class="col-lg-6">
@@ -239,10 +243,8 @@
                   </div>
                 </div>
                 <p>
-                  As a Front-End Developer, I build responsive and user-friendly websites using HTML, CSS, and
-                  JavaScript. I enjoy creating clean, visually appealing interfaces and working on real-world projects
-                  that improve user experience. I'm always learning new technologies to improve my skills and build
-                  better web applications.
+                  Full-Stack Developer specializing in React.js, Node.js, Python, and TypeScript to build and deploy responsive, API-driven web applications
+                  using Firebase and RESTful APIs.
                 </p>
               </div>
             </div>
@@ -399,9 +401,9 @@
                 <span>Python</span>
               </div>
               <div class="cube-face">
-                <i class="fa-brands fa-figma" style="color:#F24E1E;"></i>
-                <span>Figma</span>
-              </div>
+                <i class="fa-brands fa-php" style="color:#777BB4;"></i>
+                <span>PHP</span>
+            </div>
               <div class="cube-face">
                 <i class="fa-brands fa-node-js" style="color:#68A063;"></i>
                 <span>Node.Js</span>
